--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <header></header>
         <nav></nav>
         <article>
-            <div></div>
+            <div class="urlap"></div>
             <div class="lista"></div>
         </article>
         <footer>Családi Alexandra</footer>
